page layout problem fixed

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -23,6 +23,14 @@ $navbar-default-brand-color: #ff5a5f;
 }
 
 //======================================Sass=========================================================
+//************problem fixed scrollbar**********
+.row {
+
+  margin: 0 !important;
+  padding: 0 !important;
+
+}
+//************problem fixed scrollbar**********
 .thin {
   font-weight: 100 !important;
 }
@@ -75,7 +83,7 @@ label {
   -o-background-size: cover;
   background-size: cover;
   height: 600px;
-  width: 100%;
+
 
 }
 
